--- a/FrontEnd/Views/Shared/_Layout.cshtml
+++ b/FrontEnd/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Movie" asp-action="Index">Movie</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Movies" asp-action="Index">Showtime</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
