--- a/Admin/Views/Movies/Edit.cshtml
+++ b/Admin/Views/Movies/Edit.cshtml
@@ -89,17 +89,6 @@
     </div> 
     <div class="row mb-3">
         <div class="col-3">
-            <label asp-for="ReleasedDateTime" class="control-label"></label>
-        </div>
-        <div class="col-9">
-            <div class="form-group">
-                <input asp-for="ReleasedDateTime" class="form-control" type="datetime-local"/>
-                <span asp-validation-for="ReleasedDateTime" class="text-danger"></span>
-            </div>
-        </div>
-    </div>
-    <div class="row mb-3">
-        <div class="col-3">
             <label asp-for="Genre" class="control-label"></label>
         </div>
         <div class="col-9">
@@ -143,12 +132,18 @@
         </div>
     </div>       
     <div class="form-group text-end">
-        <button type="button" class="btn btn-outline-secondary" onclick="location.href='@Url.Action("Index", "Movies" )'">
-            Back
-        </button>
         <input type="submit" value="Save" class="btn btn-primary"/>
     </div>
 </form>
+<hr />
+
+@await Component.InvokeAsync("EditReleasedDateTimeTable", new { id = Model.Id })
+
+<div class="form-group text-end">
+    <button type="button" class="btn btn-outline-secondary" onclick="location.href='@Url.Action("Index", "Movies" )'">
+        Back
+    </button>
+</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
