admin: rename from 'models' to 'model'

--- a/Admin/Views/Shared/Components/DetailReleasedDateTimeTable/Index.cshtml
+++ b/Admin/Views/Shared/Components/DetailReleasedDateTimeTable/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using static Admin.ViewModels.MovieViewModels
+﻿@using static Admin.ViewModels.MovieViewModel
 @model IEnumerable<ReleasedDateTime>
 
 <h4>Released Date Time</h4>
