--- a/FrontEnd/Views/Shared/Components/HomeCarousel/Index.cshtml
+++ b/FrontEnd/Views/Shared/Components/HomeCarousel/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="carousel-caption d-none d-md-block text-white">
             <h1>MINION</h1>
             <p class="pb-0">Funny - 130 minutes - English - 24th March 2020</p>
-            <button type="button" class="btn btn-danger">Book Now</button>
+            <button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("Details", "Movies", new { id = "E3A41D61-19A4-4CC4-B083-A0EB3ACFF4E9" })'">Book Now</button>
       </div>
   </div>
     <div class="carousel-item">
@@ -18,7 +18,7 @@
         <div class="carousel-caption d-none d-md-block text-white">
             <h1>UP</h1>
             <p class="pb-0">Funny - 130 minutes - English - 24th March 2020</p>
-            <button type="button" class="btn btn-danger">Book Now</button>
+            <button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("Details", "Movies", new { id = "31709754-544E-4242-A86F-2B6BA62424F2" })'">Book Now</button>
       </div>
   </div>
     <div class="carousel-item">
@@ -26,7 +26,7 @@
         <div class="carousel-caption d-none d-md-block text-white">
             <h1>TOY STORY</h1>
             <p class="pb-0">Funny - 130 minutes - English - 24th March 2020</p>
-            <button type="button" class="btn btn-danger">Book Now</button>
+            <button type="button" class="btn btn-danger" onclick="location.href='@Url.Action("Details", "Movies", new { id = "7FE17639-811C-431D-9351-893453EB8518" })'">Book Now</button>
       </div>
   </div>
   </div>
